feat: add nginx proxy to test basePath

--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "start:dev": "NODE_ENV=development nest start --path ./tsconfig.server.json --watch",
     "start:debug": "nest start --path ./tsconfig.server.json --debug --watch",
     "start:prod": "node dist/main",
+    "start:proxy": "docker run --name nest-next-blog-proxy -v $(pwd)/nginx.conf:/etc/nginx/conf.d/default.conf:ro --add-host localnode:$(ifconfig en0 | grep inet | grep -v inet6 | awk '{print $2}') -p 8080:8080 -d nginx",
     "lint": "eslint \"{src,apps,libs,test}/**/*.tsx?\" --fix"
   },
   "dependencies": {
