--- a/nginx.conf
+++ b/nginx.conf
@@ -1,6 +1,13 @@
 server {
     listen 8080;
 
+    location /blog/_next/ {
+        proxy_pass http://localnode:3000;
+        proxy_set_header Host $host;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header X-Real-IP $remote_addr;
+    }
+
     location /blog/ {
         proxy_pass http://localnode:3000/;
         proxy_set_header Host $host;
